--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   http: ^1.2.1
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  flutter_svg: ^2.0.10+1
+  firebase_core: ^3.1.0
+  google_sign_in: ^6.2.1
+  firebase_auth: ^5.1.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
