--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_auth: ^5.1.0
   image_picker: ^1.1.2
 
+  flutter_secure_storage: ^4.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -61,7 +63,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
+  # The follofwing line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
