--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   firebase_auth: ^5.1.0
   image_picker: ^1.1.2
 
-  flutter_secure_storage: ^4.2.1
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
